# FinEvent

./: .dockerignore  .env.example  .gitignore  alembic.ini  api-smoke-test.ipynb  data-augmentation.ipynb  docker-compose.yml  environment.yml  pyproject.toml
configs/: default.yaml  logging.yaml
data/dictionaries/: README.md  event_keyword_taxonomy.csv  ticker_company_map.csv
data/schema/: event_schema_v1.json  event_taxonomy_v1.json
docs/: README.md
docs/admin-dashboard/: 01-product-scope.md  02-information-architecture.md  03-workflow-runner.md  04-live-logs-observability.md  05-database-browser.md  06-report-viewer.md  07-structured-output-viewer.md  08-api-contract.md  09-backend-job-design.md  10-frontend-implementation-plan.md  11-testing-acceptance.md  12-report-charts-visualization.md  13-milestone-graph-composer.md  README.md
docs/adr/: 0001-database-layer-strategy.md  README.md
docs/backend-api/: 01-overview.md  02-endpoints.md  03-job-runner.md  04-security-and-artifacts.md  05-milestone-graph-runner.md  README.md
docs/experiments/: experiment-plan.md
docs/implementation/: milestone-implementation-details.md  project-roadmap.md
docs/implementation/milestones/: README.md  m00-project-setup.md  m01-data-ingestion.md  m02-schema-and-ai-labeling.md  m03-rag-preparation.md  m04-retrieval-reranking.md  m05-pattern-library.md  m06-online-extraction-workflow.md  m07-verification-hallucination-reduction.md  m08-evaluation-ablation.md  m09-demo-app.md  m10-final-report-slides.md
docs/overview/: project-overview.md  rag-nlp-positioning.md  technology-stack.md
docs/report/: 01-introduction.md  02-application-value.md  03-contributions.md  04-related-work-and-baselines.md  05-dataset-description.md  06-labeling-methodology.md  07-methodology-system-design.md  08-experiments-and-evaluation.md  09-limitations-and-future-work.md  10-writing-checklist.md  README.md
docs/runbooks/: live-m00-m08.md  local-stack.md
docs/schema/: event-schema.md
docs/workflows/data/: data-workflow.md  rag-preparation-workflow.md
docs/workflows/demo/: demo-app-workflow.md
docs/workflows/evaluation/: README.md  academic-figures.md  evaluation-workflow.md
docs/workflows/extraction/: article-query-extraction-workflow.md  llm-extraction-workflow.md  verification-hallucination-workflow.md
docs/workflows/patterns/: pattern-library-workflow.md
docs/workflows/retrieval/: embedding-retrieval-workflow.md  multi-event-aware-retrieval.md
frontend/admin/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts
infra/alembic/: env.py
infra/alembic/versions/: 20260627_0001_baseline_schema.py
infra/docker/: backend-entrypoint.sh  backend.Dockerfile
infra/postgres/: 001_articles.sql  002_ticker_dictionary.sql  003_event_labels.sql  004_retrieval.sql  005_event_patterns.sql  006_extraction_runs.sql  007_verification_reports.sql  007_workflow_reports.sql
scripts/: start-local-stack.ps1  status-local-stack.ps1  stop-local-stack.ps1
src/finevent/: __init__.py  config.py  db.py  hello_pipeline.py  jsonl.py  logging_utils.py  paths.py  types.py
src/finevent/api/: __init__.py  admin_db.py  admin_health.py  admin_outputs.py  admin_reports.py  admin_runs.py  admin_workflows.py  artifacts.py  auth.py  cors.py  errors.py  job_runner.py  main.py  report_store.py  serialization.py
src/finevent/database/: __init__.py  catalog.py  cli.py  engine.py  schema.py
src/finevent/evaluation/: __init__.py  __main__.py  academic_figures.py  charts.py  cli.py  loading.py  metrics.py  models.py  pipeline.py  reporting.py
src/finevent/extraction/: __init__.py  __main__.py  cli.py  models.py  preprocess.py  prompting.py  run_sql.py  student.py  validation.py  verification.py  workflow.py
src/finevent/ingestion/: __init__.py  __main__.py  article_sql.py  audit_dictionaries.py  cli.py  dictionary_audit.py  discovery.py  download.py  metadata.py  (+8 more)
tests/: test_admin_api.py  test_api_smoke_notebook.py  test_config.py  test_data_augmentation_notebook.py  test_database_foundation.py  test_evaluation_ablation.py  test_ingestion.py  test_labeling_pipeline.py  test_llm_provider.py  test_online_extraction_workflow.py  test_pattern_library.py  test_rag_preparation.py  test_retrieval_reranking.py  test_schema_validation.py  test_verification_hallucination.py
(+132 files in other folders)
