[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "finevent-vn"
version = "0.1.0"
description = "Workflow-first Vietnamese financial event extraction project."
readme = "docs/README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.8",
  "pyright>=1.1",
]
config = [
  "python-dotenv>=1.0",
  "pyyaml>=6.0",
]
ingestion = [
  "beautifulsoup4>=4.12",
  "pandas>=2.2",
  "requests>=2.32",
  "sqlalchemy>=2.0",
  "trafilatura>=1.12",
]
api = [
  "fastapi>=0.115",
  "pydantic>=2.0",
  "sqlalchemy>=2.0",
  "uvicorn>=0.30",
]

[project.scripts]
finevent-hello = "finevent.hello_pipeline:main"
finevent-ingest = "finevent.ingestion.cli:main"
finevent-audit-dictionaries = "finevent.ingestion.audit_dictionaries:main"
finevent-sync-ticker-dictionary = "finevent.ingestion.sync_ticker_dictionary:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "basic"
