[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "finevent-vn"
version = "0.1.0"
description = "Workflow-first Vietnamese financial event extraction project."
readme = "docs/README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.8",
  "pyright>=1.1",
]
config = [
  "python-dotenv>=1.0",
  "pyyaml>=6.0",
]
db = [
  "alembic>=1.13",
  "psycopg[binary]>=3.2",
  "sqlalchemy>=2.0",
]
ingestion = [
  "beautifulsoup4>=4.12",
  "pandas>=2.2",
  "requests>=2.32",
  "sqlalchemy>=2.0",
  "trafilatura>=1.12",
]
api = [
  "fastapi>=0.115",
  "pydantic>=2.0",
  "python-dotenv>=1.0",
  "sqlalchemy>=2.0",
  "uvicorn>=0.30",
]
rag = [
  "requests>=2.32",
  "sqlalchemy>=2.0",
]
workflow = [
  "langchain-core>=0.3",
  "langgraph>=0.2",
]
llm = [
  "langchain-openai>=0.2",
  "openai>=1.50",
  "tenacity>=8.5",
]
notebook = [
  "ipykernel>=6.29",
  "jupyter>=1.1",
  "nbclient>=0.10",
  "nbformat>=5.10",
]
evaluation = [
  "matplotlib>=3.9",
  "numpy>=2.0",
  "pandas>=2.2",
  "scikit-learn>=1.5",
  "seaborn>=0.13",
]

[project.scripts]
finevent-hello = "finevent.hello_pipeline:main"
finevent-db = "finevent.database.cli:main"
finevent-ingest = "finevent.ingestion.cli:main"
finevent-audit-dictionaries = "finevent.ingestion.audit_dictionaries:main"
finevent-sync-ticker-dictionary = "finevent.ingestion.sync_ticker_dictionary:main"
finevent-label = "finevent.labeling.cli:main"
finevent-rag = "finevent.rag.cli:main"
finevent-retrieve = "finevent.retrieval.cli:main"
finevent-patterns = "finevent.patterns.cli:main"
finevent-extract = "finevent.extraction.cli:main"
finevent-evaluate = "finevent.evaluation.cli:main"
finevent-live = "finevent.ops.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "basic"
